[gd_scene load_steps=8 format=3 uid="uid://crmgdl0poacw7"]

[ext_resource type="Script" path="res://scripts/mob.gd" id="1_ccvon"]
[ext_resource type="Texture2D" uid="uid://c0nbuq6rjuljq" path="res://art/saw_64/saw_64_0.png" id="2_6pwmh"]

[sub_resource type="Animation" id="Animation_br4kg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [6.28319]
}

[sub_resource type="Animation" id="Animation_a7rpp"]
resource_name = "rotation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6.28319, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_507ck"]
_data = {
"RESET": SubResource("Animation_br4kg"),
"rotation": SubResource("Animation_a7rpp")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_nb80f"]
radius = 32.2025

[sub_resource type="Gradient" id="Gradient_82fmg"]
offsets = PackedFloat32Array(0.08, 0.626667)

[node name="Mob" type="RigidBody2D"]
rotation = 6.28319
collision_layer = 3
collision_mask = 0
gravity_scale = 0.0
script = ExtResource("1_ccvon")
metadata/type = "Enemy"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_6pwmh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 1
callback_mode_process = 0
libraries = {
"": SubResource("AnimationLibrary_507ck")
}
autoplay = "rotation"
playback_auto_capture = false
speed_scale = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CircleShape2D_nb80f")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 0.5)
scale = Vector2(3.2, 3.25)

[node name="Button" type="Button" parent="."]
offset_left = -65.0
offset_top = -63.0
offset_right = 65.0
offset_bottom = 59.0
focus_mode = 0
shortcut_feedback = false
flat = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(0, 12)
emitting = false
amount = 25
lifetime = 0.4
one_shot = true
explosiveness = 0.81
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 250.0
initial_velocity_max = 250.0
scale_amount_min = 5.0
scale_amount_max = 15.0
color = Color(1, 0.168627, 0.14902, 1)
color_initial_ramp = SubResource("Gradient_82fmg")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="finished" from="CPUParticles2D" to="." method="_on_cpu_particles_2d_finished"]
